fixed style css

--- a/cart.html
+++ b/cart.html
@@ -120,21 +120,13 @@
                 <div class="shipping-method" >
                     <div class="shipping_left">
                         <h3>Shipping method:</h3>
-                        <div class="shipping-inner checkbox-design pd-left">
-                            <div class="ups-saver">
-                                <input id="ups_saver" type="radio" name="ups" value="ups_saver">
-                                <label for="ups_saver"></label>
-                            </div>
-                            <div id="ups-saver-left">UPS_SAVER</div>
-                            <div id="ups-saver-right">Free</div>
+                        <div class="shipping-inner checkbox-design ">
+                            <input id="ups_saver" type="radio" name="ups" value="ups_saver">
+                            <label for="ups_saver">UPS_SAVER <span class="ups-saver-left"> Free</span></label>
                         </div>
                         <div class="shipping-inner checkbox-design">
-                            <div class="ups-saver">
-                                <input id="ups_express" type="radio" name="ups" value="ups_express">
-                                <label for="ups_express"></label>
-                            </div>
-                            <div id="ups-saver-left">UPS Express</div>
-                            <div id="ups-saver-right">$7,50</div>
+                            <input id="ups_express" type="radio" name="ups" value="ups_express">
+                            <label for="ups_express">UPS Express <span class="ups-saver-left"> $7,50</span></label>
                         </div>
                     </div>
                     <div class="shipping_right">
