--- a/cart2.html
+++ b/cart2.html
@@ -53,7 +53,7 @@
                             <td class="name-book"><a href="#">The Meandering Corpse</a>
                                 <p>Richard S. Prather</p></td>
                             <td class="font-book-size">Hardback, 170x 215 mm</td>
-                            <td class="font-book-size">English</td>
+                            <td class="font-book-language">English</td>
                             <td class="quantity-number">
                                 <input class="del" type="button" value="-">
                                 <input type="number" min="1" placeholder="1">
