add img to bookworm_home_page

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </article>
     </section>
 
-    <section class="presentation_books container">
+    <section class="presentation_books container-sm ">
         <div class="presentation_book">
             <div class="presentation_text">
                 <h2> The Da Vinci Code </h2>
@@ -235,7 +235,7 @@
         <div class="clearfix"></div>
     </section>
 
-    <section class="container shopfront">
+    <section class="inner-shopfrontmenu container-sm ">
         <h1>Shopfront</h1>
         <nav class="shopfrontmenu">
             <div class="shopfrontmenuleft">
@@ -245,7 +245,7 @@
                     <li><a href="#">Audio books</a></li>
                     <li><a href="#">Biography</a></li>
                     <li><a href="#">Business</a></li>
-                    <li><a href="#">Children Book</a></li>
+                    <li class="padding_0"><a href="#">Children Book</a></li>
                 </ul>
             </div>
             <div class="shopfrontmenuright">
@@ -257,7 +257,7 @@
         </nav>
     </section>
 
-    <section class="container">
+    <section class="container-sm">
         <div class="books">
             <div class="book-item">
                 <a href="#"><img class="book-img" src="img/books/book1.png" alt="Cover he Opaque Region" width="146"
@@ -307,8 +307,18 @@
                 <a class="book-author">Richard Prather</a>
             </div>
             <div class="book-item">
-                <a href="#"><img class="book-img" src="img/books/9.png" alt="Cover he English Detective Stories" width="146"
+                <div class="style-cover-img"></div>
+                <a href="#" class="oval"><span class="glasses"></span></a>
+                <a href="#" class="oval-sm-left"><span class="flag"></span></a>
+                <a href="#" class="oval-sm-right">
+                    <span class="basket">
+                        <span class="shape7"></span>
+                        <span class=" shape8"></span>
+                    </span>
+                </a>
+                <a href="#"><img class="book-img " src="img/books/red_queen.png" alt="Cover he English Detective Stories" width="146"
                                  height="227"></a>
+                <a href="#" class="img-text">$12</a>
                 <a class="book-title">English Detective Stories</a>
                 <a class="book-author">Patricia Craig</a>
             </div>
@@ -371,7 +381,7 @@
         </div>
     </section> <!-- emd container -->
 
-    <section class="container">
+    <section class="container-sm">
         <div class="popwrites">
             <h1 class="popwrites_header">Popular writers</h1>
             <nav class="menupopular">
@@ -398,9 +408,12 @@
                     </div>
                     <div class="clearfix"></div>
                     <div>
-                        <span class="fontcaption_text">You are right. He did not. But  millions of Germans did betray their selves.
+                        <span class="fontcaption_text">
+                            <p>You are right. He did not. But  millions of Germans did betray their selves.
                                 That was the tragedy. Not that one man had the courage to be evil.
-                                But that milions had not the courage.</span>
+                                But that milions had not the courage.
+                            </p>
+                        </span>
                     </div>
                 </div>
                 <div class="section_photo_autor">
@@ -409,7 +422,7 @@
                 <div class="section_book_autor">
                     <h3>About</h3>
                     <br>
-                    <p><span class="font_comment_text">In hac habitasse platea dictumst. Vivamus adipiscing fermentum </span>
+                    <p><span class="font_comment_text">In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris. Sed ullamcorper tellus erat, non ultrices sem…</span>
                     </p>
                     <br>
                     <h3>Books</h3>
@@ -417,13 +430,16 @@
                         <a href="#"><img src="img/b1.png" alt="book" width="73" height="114"></a>
                         <a href="#"><img src="img/b2.png" alt="book" width="73" height="114"></a>
                         <a href="#"><img src="img/b3.png" alt="book" width="73" height="114"></a>
-                        <a class="inner-bookmark" href="#"><img src="img/b4.png" alt="book" width="73" height="114"></a>
-                        <div class="bookmark">20<img src="img/icons_svg/icon_book.png" width="15" height="17" alt="bookmark">
-                        </div>
+                        <a class="inner-bookmark" href="#">
+                            <div class="textbookmark">20</div>
+                            <div class="bookmark"></div>
+                            <img src="img/b4.png" alt="book" width="73" height="114">
+                        </a>
                     </div>
-                    <div>
-                        <span class="writer_page">to writer page</span>
-                            <img src="img/rectangle.png" alt="rectangle" width="21" height="21">
+                    <div class="clearfix"></div>
+                    <div class="writer_page">
+                        <a href="#">to writer page</a>
+                        <img src="img/rectangle.png" alt="rectangle" width="21" height="21">
                     </div>
                 </div>
                 <div class="clearfix"></div>
@@ -431,7 +447,7 @@
         </div>
     </section>
 
-    <section class="container">
+    <section class="container-sm">
         <div class="literature_books">
             <h1>Literature news</h1>
         </div>
@@ -518,7 +534,7 @@
         </div>
     </section> <!-- end container -->
 
-    <section class="container background_books">
+    <section class="container-sm background_books">
         <div class="discount">
             <div class="about_discounts">
                 <h1> Discount for novel</h1>
@@ -544,7 +560,7 @@
         </div>
     </section> <!-- end container -->
 
-    <section class="container">
+    <section class="container-sm">
         <div class="slider-popular-book">
             <input checked type="radio" name="respond" id="desktop-popular-book">
             <label for="desktop-popular-book"></label>
@@ -818,7 +834,7 @@
         </div>
     </section>
 
-    <section class="container">
+    <section class="container-sm">
         <div class="publishers">
             <div class="description">
                 <h1>Publishers</h1>
