--- a/index.html
+++ b/index.html
@@ -307,18 +307,22 @@
                 <a class="book-author">Richard Prather</a>
             </div>
             <div class="book-item">
-                <div class="style-cover-img"></div>
-                <a href="#" class="oval"><span class="glasses"></span></a>
-                <a href="#" class="oval-sm-left"><span class="flag"></span></a>
-                <a href="#" class="oval-sm-right">
-                    <span class="basket">
-                        <span class="shape7"></span>
-                        <span class=" shape8"></span>
-                    </span>
+                <a href="#">
+                    <img class="book-img " src="img/books/red_queen.png" alt="Cover he English Detective Stories" width="146"                                height="227">
                 </a>
-                <a href="#"><img class="book-img " src="img/books/red_queen.png" alt="Cover he English Detective Stories" width="146"
-                                 height="227"></a>
-                <a href="#" class="img-text">$12</a>
+                <div class="style-cover-img">
+                    <span class="inner-cover-img">
+                    <a href="#" class="oval"><span class="glasses"></span></a>
+                    <a href="#" class="oval-sm-left"><span class="flag"></span></a>
+                    <a href="#" class="oval-sm-right">
+                        <span class="basket">
+                            <span class="shape7"></span>
+                            <span class=" shape8"></span>
+                        </span>
+                    </a>
+                    <a href="#" class="img-text">$12</a>
+                    </span>
+                </div>
                 <a class="book-title">English Detective Stories</a>
                 <a class="book-author">Patricia Craig</a>
             </div>
@@ -452,8 +456,8 @@
             <h1>Literature news</h1>
         </div>
         <div class="literature_news">
-            <ul>
-                <li class="block-literature">
+            <!--<ul>-->
+                <div class="block-literature">
                     <div class="img-literature">
                         <a href="#"><img src="img/111.png" alt="picture" width="342" height="553"></a>
                     </div>
@@ -462,8 +466,8 @@
                         <a href="#"><span class="font_orange">Nathan Sandoval </span> <span class="fontcaption_grey"> | 15.10.16</span></a>
                     </div>
                     <div class="clearfix"></div>
-                </li>
-                <li class="block-literature">
+                </div>
+                <div class="block-literature">
                     <div class="img-literature">
                         <a href="#"><img src="img/222.png" alt="picture" width="342" height="553"></a>
                     </div>
@@ -472,8 +476,8 @@
                         <a href="#"><span class="font_orange">Jacqueline Taylor</span> <span class="fontcaption_grey"> | 23.10.16</span></a>
                     </div>
                     <div class="clearfix"></div>
-                </li>
-                <li class="block-literature">
+                </div>
+                <div class="block-literature">
                     <div class="img-literature">
                         <a href="#"><img src="img/333.png" alt="picture" width="342" height="553"></a>
                     </div>
@@ -482,8 +486,8 @@
                         <a href="#"><span class="font_orange">Elizabeth Dixon </span> <span class="fontcaption_grey">| 16.10.15</span></a>
                     </div>
                     <div class="clearfix"></div>
-                </li>
-            </ul>
+                </div>
+            <!--</ul>-->
         </div>
         <div class="clearfix"></div>
         <div class="literature_news_autor">
@@ -519,6 +523,8 @@
         <div class="slider_block">
             <div class="slide_block1">
                 <img src="img/man.png" alt="man with dog" width="866" height="632">
+                <div class="lili"></div>
+                <!--<img class="lili" src="img/lili.png" alt="lili" -->
             </div>
             <div class="slide_block3">
                 <h1>Lily and the octopus</h1>
