fixed index.html add img

--- a/index.html
+++ b/index.html
@@ -524,9 +524,11 @@
             <div class="slide_block1">
                 <img src="img/man.png" alt="man with dog" width="866" height="632">
                 <div class="lili"></div>
+
                 <!--<img class="lili" src="img/lili.png" alt="lili" -->
             </div>
             <div class="slide_block3">
+                <div class="release-of-date"></div>
                 <h1>Lily and the octopus</h1>
                 <p><span class="font_slider_orange">Steven Rowley </span> <span class="font_slider_vote"> 5 <img
                         src="img/star.png" width="18" height="17" alt="star"></span></p>
@@ -540,7 +542,8 @@
         </div>
     </section> <!-- end container -->
 
-    <section class="container-sm background_books">
+    <section class="container-sm ">
+        <div class="background_books">
         <div class="discount">
             <div class="about_discounts">
                 <h1> Discount for novel</h1>
@@ -564,10 +567,13 @@
                 <a href="#" class="btn">All books</a>
             </div>
         </div>
+        </div>
     </section> <!-- end container -->
 
     <section class="container-sm">
+
         <div class="slider-popular-book">
+            <h1>Popular series</h1>
             <input checked type="radio" name="respond" id="desktop-popular-book">
             <label for="desktop-popular-book"></label>
             <article id="slider-popular-book">
