add responsive for index.html 768px

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         </div>
     </section>
 
-    <section class="container-sm">
+    <section class="container-sm literature">
         <div class="literature_books">
             <h1>Literature news</h1>
         </div>
