homework js menu 01.12.2017

--- a/cart2.html
+++ b/cart2.html
@@ -55,9 +55,9 @@
                             <td class="font-book-size">Hardback, 170x 215 mm</td>
                             <td class="font-book-language">English</td>
                             <td class="quantity-number">
-                                <input class="del" type="button" value="-">
-                                <input type="number" min="1" placeholder="1">
-                                <input class="add" type="button" name="product" value="+">
+                                <input id="del1" type="button" value="-">
+                                <input id="number1" type="number" min="1" placeholder="0">
+                                <input id="add1" type="button" name="product" value="+">
                             </td>
                             <td class="font-money">$25</td>
                         </tr>
@@ -73,9 +73,9 @@
                             <td class="font-book-size">Hardback, 170x 215 mm</td>
                             <td class="font-book-size">English</td>
                             <td class="quantity-number">
-                                <input class="del" type="button" value="-">
-                                <input type="number" min="1" placeholder="1">
-                                <input class="add" type="button" name="product" value="+">
+                                <input id="del2" type="button" value="-">
+                                <input id="number2" type="number" min="1" placeholder="0">
+                                <input id="add2" type="button" name="product" value="+">
                             </td>
                             <td class="font-money">$25</td>
                         </tr>
@@ -91,9 +91,9 @@
                             <td class="font-book-size">Hardback, 170x 215 mm</td>
                             <td class="font-book-size">English</td>
                             <td class="quantity-number">
-                                <input class="del" type="button" value="-">
-                                <input type="number" min="1" placeholder="1">
-                                <input class="add" type="button" name="product" value="+">
+                                <input id="del3" type="button" value="-">
+                                <input id="number3" type="number" min="1" placeholder="0">
+                                <input id="add3" type="button" name="product" value="+">
                             </td>
                             <td class="font-money">$25</td>
                         </tr>
@@ -254,6 +254,7 @@
     </div>
 
     <script src="js/popup.js"></script>
+    <script src="js/cart2.js"></script>
 
 
 </body>
