--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-            <ul class="info_boks">
+            <ul class="info_boks  menu-animation">
                 <li>
                     <div class="search"></div>
                 </li>
@@ -36,6 +36,11 @@
                 </li>
             </ul>
             <div class="clearfix"></div>
+            <div class="navigation">
+                <button class="burger">
+                    <span aria-hidden=true></span>
+                </button>
+            </div>
         </nav>
     </header>
     <section class="slider-header-book container">
@@ -308,7 +313,7 @@
             </div>
             <div class="book-item">
                 <a href="#">
-                    <img class="book-img " src="img/books/red_queen.png" alt="Cover he English Detective Stories" width="146"                                height="227">
+                    <img class="book-img relative" src="img/books/red_queen.png" alt="Cover he English Detective Stories" width="146"                                height="227">
                 </a>
                 <div class="style-cover-img">
                     <span class="inner-cover-img">
@@ -1038,7 +1043,9 @@
         <!--</div>-->
     <!--</div>-->
 <!--</div>-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="js/popup.js"></script>
+<script src="js/menu.js"></script>
 
 </body>
 </html>
