--- a/article.html
+++ b/article.html
@@ -23,20 +23,30 @@
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-                <ul class="info_boks">
+                <ul class="info_boks ">
                     <li>
-                        <div class="search"></div>
+                        <a href="" class="search"></a>
                     </li>
                     <li>
-                        <div class="shoppingcart"></div>
+                        <a href="" class="shoppingcart" ></a>
                     </li>
                     <li>
-                        <div id="inner-userpic">
-                            <a href="#wrap-login" id="show-popup" class="show-button" ><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a>
-                        </div>
+                        <!--<div id="inner-userpic">-->
+                        <a href="#wrap-login" id="show-popup" class="show-button" ><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a>
+                        <!--</div>-->
                     </li>
                 </ul>
+                <ul class="menu-about">
+                    <li><a href="">Search</a></li>
+                    <li><a href="">Cart</a></li>
+                    <li><a href="">User</a></li>
+                </ul>
                 <div class="clearfix"></div>
+                <div class="navigation">
+                    <button id="menuburger" class="burger">
+                        <span aria-hidden=true></span>
+                    </button>
+                </div>
             </nav>
         </header>
         <div class="article-container">
@@ -446,5 +456,6 @@
     </div>
 
     <script src="js/popup.js"></script>
+    <script src="js/menu.js"></script>
 </body>
 </html>
