--- a/index.html
+++ b/index.html
@@ -22,22 +22,27 @@
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-            <ul class="info_boks  menu-animation">
+            <ul class="info_boks ">
                 <li>
-                    <div class="search"></div>
+                    <a href="" class="search"></a>
                 </li>
                 <li>
-                    <div class="shoppingcart"></div>
+                    <a href="" class="shoppingcart" ></a>
                 </li>
                 <li>
-                    <div id="inner-userpic">
+                    <!--<div id="inner-userpic">-->
                         <a href="#wrap-login" id="show-popup" class="show-button" ><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a>
-                    </div>
+                    <!--</div>-->
                 </li>
+            </ul>
+            <ul class="menu-about">
+                <li><a href="">Search</a></li>
+                <li><a href="">Cart</a></li>
+                <li><a href="">User</a></li>
             </ul>
             <div class="clearfix"></div>
             <div class="navigation">
-                <button class="burger">
+                <button id="menuburger" class="burger">
                     <span aria-hidden=true></span>
                 </button>
             </div>
@@ -1043,7 +1048,7 @@
         <!--</div>-->
     <!--</div>-->
 <!--</div>-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>-->
 <script src="js/popup.js"></script>
 <script src="js/menu.js"></script>
 
