--- a/formcalc.html
+++ b/formcalc.html
@@ -15,7 +15,7 @@
                     <h3>Количество спален</h3>
                     <div class="block-bed">
                         <input class="check-room" type="radio" id="bed-1" value="1" name="bed-rooms" >
-                        <label for="bed-1"></label>
+                        <label class="style-block" for="bed-1"></label>
                     </div>
                     <div class="block-bed">
                         <input class="check-room" type="radio" id="bed-2" value="2" name="bed-rooms">
@@ -117,6 +117,7 @@
             <div class="container">
                 <input type="submit">
             </div>
+        <div class="error-calc"></div>
 
         </form>
     </div>
