--- a/cart.html
+++ b/cart.html
@@ -14,23 +14,60 @@
         <nav class="menu container">
             <div class="menu_logo">
             </div>
-            <ul class="menu_list">
-                <li><a href="#">Books</a></li>
-                <li><a href="#">Writers</a></li>
-                <li><a href="#">Publishers</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-            <ul class="info_boks">
-                <li><div class="search"></div></li>
-                <li><div class="shoppingcart"></div></li>
-                <li>
-                    <div id="inner-userpic">
+            <div id="menu-all">
+                <ul class="menu_list">
+                    <li><a href="#">Books</a></li>
+                    <li><a href="#">Writers</a></li>
+                    <li><a href="#">Publishers</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <ul class="info_boks ">
+                    <li>
+                        <a href="" class="search"></a>
+                    </li>
+                    <li>
+                        <a href="" class="shoppingcart" ></a>
+                    </li>
+                    <li>
+                        <!--<div id="inner-userpic">-->
                         <a href="#wrap-login" id="show-popup" class="show-button" ><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a>
-                    </div>
-                </li>
-            </ul>
+                        <!--</div>-->
+                    </li>
+                </ul>
+                <ul class="menu-about">
+                    <li><a href="">Search</a></li>
+                    <li><a href="">Cart</a></li>
+                    <li><a href="">User</a></li>
+                </ul>
+            </div>
+            <div class="clearfix"></div>
+            <div class="navigation">
+                <button id="menuburger" class="burger">
+                    <span aria-hidden=true></span>
+                </button>
+            </div>
         </nav>
+        <!--<nav class="menu container">-->
+            <!--<div class="menu_logo">-->
+            <!--</div>-->
+            <!--<ul class="menu_list">-->
+                <!--<li><a href="#">Books</a></li>-->
+                <!--<li><a href="#">Writers</a></li>-->
+                <!--<li><a href="#">Publishers</a></li>-->
+                <!--<li><a href="#">Blog</a></li>-->
+                <!--<li><a href="#">Contact</a></li>-->
+            <!--</ul>-->
+            <!--<ul class="info_boks">-->
+                <!--<li><div class="search"></div></li>-->
+                <!--<li><div class="shoppingcart"></div></li>-->
+                <!--<li>-->
+                    <!--<div id="inner-userpic">-->
+                        <!--<a href="#wrap-login" id="show-popup" class="show-button" ><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a>-->
+                    <!--</div>-->
+                <!--</li>-->
+            <!--</ul>-->
+        <!--</nav>-->
 
         <div class="cart-wrap container">
             <h1>Your cart</h1>
@@ -338,6 +375,7 @@
         </div>
 
     </div>
+    <script src="js/menu.js"></script>
     <script src="js/popup.js"></script>
     <script src="js/formcart.js"></script>
     <script src="js/classie.js"></script>
